@@ -6,6 +6,7 @@ You can use Trac wiki syntax.
 
 == Trunk ==
 
+ * Comparison operator for tag selector.
  * Experimental BAM reading/writing.
  * Allowing the store elements of fragment stores to be comparable.
  * Adding bundled version of ''samtools''.
